add: Constructores con y sin id